[ui improvement] fix overflowed menu text

--- a/src/Timeline/Timeline.css
+++ b/src/Timeline/Timeline.css
@@ -13,7 +13,6 @@
 .Menu-wrapper .MenuItem .Time {
   font-size: 0.85em;
   opacity: 0.7;
-  margin-left: -1rem;
   margin-top: 0.25em;
   display: block;
 }
